--- a/choice2.html
+++ b/choice2.html
@@ -14,8 +14,9 @@
     <link rel='stylesheet' href='style.css'>
     <style>
         .cover-image {
-            background-image: url('https://media.istockphoto.com/id/472512786/photo/global-warming-elements-of-this-image-furnished-by-nasa.jpg?s=612x612&w=0&k=20&c=4a-iLPMyBmXhHeWvTd9A9PRnBs9aMwyuH1A-fZJV1NA=');
+            background-image: url('https://cdn.vox-cdn.com/thumbor/bmBROAsm4x_KL0ySl3nhBasLAIY=/0x0:5200x3250/1220x813/filters:focal(2223x1293:3055x2125):format(webp)/cdn.vox-cdn.com/uploads/chorus_image/image/51731623/apocalypsecover.0.jpg');
             background-position: top;
+            opacity: 0.15;
         }
     </style>
 </head>
