--- a/choice3.html
+++ b/choice3.html
@@ -18,7 +18,7 @@
         }
 
         .cover-image {
-            background-image: url('https://i.pinimg.com/originals/ae/e8/3d/aee83d11caeb7cd3df17475de5df859d.jpg');
+            background-image: url('https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=2072&q=80');
             background-position: center;
             opacity: 0.2;
         }
